--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-gates",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://masa2el.github.io/the3gates_frontend",
+  "homepage": "http://SehamAnter1.github.io/Company-Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
