--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Company-Portfolio",
+  "name": "company-portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://SehamAnter1.github.io/Company-Portfolio",
